Bug 118977 - MacOS: Low resolution image when pasting screenshot from Preview to Writer
Summary: MacOS: Low resolution image when pasting screenshot from Preview to Writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All macOS (All)
: medium normal
Assignee: Tomaz Vajngerl
URL:
Whiteboard: target:6.3.0 target:6.2.4
Keywords:
Depends on:
Blocks: Paste
  Show dependency treegraph
 
Reported: 2018-07-28 08:46 UTC by Telesto
Modified: 2019-05-06 19:02 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-07-28 08:46:00 UTC
Description:
MacOS: Low resolution image when pasting screenshot from Preview to Writer

Steps to Reproduce:
1. Open a PDF
2. Shift CMD A (opens the marking tool)
3. Select an text area & copy it (as image)
4. Paste into Writer

Actual Results:
Small low res image

Expected Results:
Normal resolution


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.2.0.0.alpha0+
Build ID: 76bf3939b0583212a56c317c85aea110f8ac6fee
CPU threads: 4; OS: Mac OS X 10.12.6; UI render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2018-07-27_06:01:47
Locale: nl-NL (nl_NL.UTF-8); Calc: group threaded
Comment 1 Alex Thurgood 2018-07-30 08:02:37 UTC
Confirming also with 

LO5472

I suspect that this might already have been reported somewhere.
Comment 2 Xisco Faulí 2018-08-02 11:17:00 UTC
Hi Telesto,
I can't reproduce it copying the image from Acrobat Reader. Could you please try this on your side?
OTOH, what happens if you copy the image in Preview and paste it in another program?
Finally, please attach a PDF where the issue is reproduced....
Setting to NEEDINFO
Comment 3 Telesto 2018-08-02 11:58:19 UTC
A: Any PDF will do
1. https://www.libreoffice.org/assets/Uploads/Documentation/en/GS51-GettingStartedLO.pdf
2. Scroll to page 2 in MacOS Preview. Copy the Copyright column (as a image)

B: Pasting between preview and Evernote is working fine

C: Acrobat Reader works (except that screenshot quality seems to depend on zoom level; quality getting  worse when zooming out, but might be expect
Comment 4 Xisco Faulí 2018-08-02 12:05:28 UTC
putting back to NEW.
Thanks for the information provided...
Comment 5 Commit Notification 2019-04-26 15:12:35 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/615202cab983f1f13407f6515aeb047e4e09f6ed%5E%21

tdf#118977 support PDF documents as a clipboard format

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2019-04-30 13:20:39 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/e20c57976583cb2721dd91949d8ff0e8db446351%5E%21

tdf#118977 support PDF documents as a clipboard format

It will be available in 6.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.